tests/derive_ui/subcommand_opt_vec.stderr
error: `Option<Vec<T>>` is an invalid `#[command(subcommand)]` type
  --> tests/derive_ui/subcommand_opt_vec.rs:17:10
   |
17 |     cmd: Option<Vec<Command>>,
   |          ^^^^^^
